upate: fixed auth page spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3585,11 +3585,9 @@ section .section-heading {
 }
 
 .auth {
-  height: 100vh;
   overflow: hidden;
-  padding-top: 80px;
+  padding: 80px 0px;
   position: relative;
-  overflow-y: scroll;
   background-color: #000000;
 }
 
@@ -3602,7 +3600,7 @@ section .section-heading {
 
 .auth-img {
   width: 100%;
-  height: 100vh;
+  height: 720px;
   overflow: hidden;
   position: relative;
 }
