--- a/assets/scss/layouts/_auth.scss
+++ b/assets/scss/layouts/_auth.scss
@@ -1,9 +1,8 @@
 .auth {
-	height: 100vh;
+	// height: 100vh;
 	overflow: hidden;
-	padding-top: 80px;
+	padding: 80px 0px;
 	position: relative;
-	overflow-y: scroll;
 	background-color: #000000;
 
 	@include max(1200px) {
@@ -13,7 +12,8 @@
 
 	&-img {
 		width: 100%;
-		height: 100vh;
+		height: 720px;
+		// height: 100vh;
 		overflow: hidden;
 		position: relative;
 
